--- a/.github/workflows/rsas_update.yml
+++ b/.github/workflows/rsas_update.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: rsas update monitoring
+name: rsas update
 
 on:
   schedule:
@@ -21,11 +21,11 @@ jobs:
     - name: Install dependencies
       run: |
         pip install requests
-    - name: rsas update monitoring
+    - name: rsas update
       env: 
          DINGTALK_TOKEN: ${{ secrets.DINGTALK_TOKEN }}
       run: |
-        python rsas_update_monitoring.py
+        python run.py
     - name: Commit and push if changed
       run: |
         git diff
